buildconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver
  template:
    metadata:
      labels:
        app: mockserver
    spec:
      containers:
        - name: mockserver
          image: node:16
          command: ["npm", "run", "start-server"]
          volumeMounts:
            - mountPath: /usr/src/app
              name: mockserver-volume
      volumes:
        - name: mockserver-volume
          configMap:
            name: mockserver-config
