route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mockclient-route
spec:
  to:
    kind: Service
    name: mockclient-service
  port:
    targetPort: 8080
